<resources>
    <string name="app_name">Анонимный чат</string>
    <string name="login_fragment_title">Авторизация</string>
    <string name="register_fragment1_title">Регистрация</string>
    <string name="register_fragment2_title">Регистрация</string>
    <string name="settings_title">Настройки</string>
    <string name="register_fragment_subtitle">Никто, кроме тебя, не будет их знать</string>
    <string name="turn_on_dark_mode">Включить ночной режим</string>
    <string name="turn_off_dark_mode">Выключить ночной режим</string>
    <string name="turn_on_off_dark_mode">Ночной режим</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="go_next">Продолжить</string>
    <string name="date_hint">дд.мм.гггг</string>
    <string name="register">Зарегистрироваться</string>
    <string name="filters_title">Выберите параметры</string>
    <string name="copyright">© iooojik</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="message">Сообщение…</string>
    <string name="wrong_email">Некорректная почта</string>
    <string name="not_acceptable_email">Неверный email</string>
    <string name="short_password">Короткий пароль</string>
    <string name="male_sex">Мужской</string>
    <string name="female_sex">Женский</string>
    <string name="no_matter_sex">Не имеет значения</string>
    <string name="your_sex">Ваш пол</string>
    <string name="interlocutor_sex">Пол собеседника</string>
    <string name="interlocutor_age">Возраст собеседника</string>
    <string name="find">Найти</string>
    <string name="text_view_age">%1$s, %2$s лет</string>
    <string name="users_in_search">Ищут собеседника: %1$s</string>
    <string name="cancel">Отмена</string>
    <string name="finish_chat">Завершить чат</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="anonim">Аноним</string>
    <string name="okey">Хорошо</string>
    <string name="first_start_up_title">Привет!</string>
    <string name="first_start_up_message">Меня зовут Стас, и я создатель данного приложения.
        Оно только запустилось, поэтому количество онлай-пользователей может быть маленьким.
        Буду очень признателен, если вы поможете развить данный проект, поделившись им с друзьями!
        \n В случае появления ошибок не стесняйтесь писать мне в ВК, Telegram или Instagram  😉 Мой id - @iooojik</string>
    <string name="typing">печатает…</string>
    <string name="copied">Скопировано</string>
    <string name="finish_chat_confirmation">Вы действительно хотите завершить чат?</string>
    <string name="error_request">Ошибка выполнения запроса</string>
    <string name="active_chat">У вас есть незавершённый чат</string>
    <string name="image_under_title" translatable="false">image_under_title</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="message_seen" translatable="false">message_seen</string>
    <string name="avatar" translatable="false">avatar</string>
    <string name="registration_info">Пожалуйста, указывайте именно Вашу почту, и только на латинице. Например, admin@iooojik.ru</string>
    <string name="registration_info2">Пожалуйста, указывайте настоящую дату рождения. Дальше вы не сможете изменить её.</string>
    <string name="registration_info2_2">Регистрируясь, Вы принимаете наше Соглашение
        об обработке персональных данных и Условия использования. (Нажмите на данное сообщение, чтобы просмотреть их)</string>
    <string name="about_app">О приложении</string>
    <string name="logo">Логотип</string>
    <string name="app_version">Версия %1$s</string>
    <string name="mark_app">Оценить приложение</string>
    <string name="policy_conf">Политика конфиденциальности</string>
    <string name="terms_of_use">Правила пользования</string>
    <string name="contacts">Контакты</string>
    <string name="vk">ВКонтакте</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="authorization_error">Ошибка авторизации %1$s</string>
    <string name="chat_was_ended">Чат завершён</string>
    <string name="deauth_from_account">Выйти из аккаунта</string>

</resources>