<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="iooojik.anon.meet.ui.about.app.AboutAppFragment" />

        <variable
            name="version"
            type="String" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/standard_margin_2"
                android:contentDescription="@string/logo"
                android:onClick="@{fragment::goToMarkApp}"
                android:src="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/standard_margin_2"
                android:text="@{@string/app_version(String.format(`%s`, version))}"
                android:textSize="12sp"
                tools:text="version" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/standard_margin_large"
                android:layout_marginBottom="@dimen/standard_margin_large"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/mark_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin_2"
                android:onClick="@{fragment::goToMarkApp}"
                android:text="@string/mark_app" />

            <Button
                android:id="@+id/policy_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin_2"
                android:onClick="@{fragment::goToPolicy}"
                android:text="@string/policy_conf" />

            <Button
                android:id="@+id/terms_of_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin_2"
                android:onClick="@{fragment::goToTerms}"
                android:text="@string/terms_of_use" />

            <TextView
                style="@style/headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin_2"
                android:text="@string/contacts" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/vk"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/vk"
                    android:onClick="@{fragment::goToVK}"
                    android:src="@drawable/vk_logo" />

                <ImageView
                    android:id="@+id/telegram"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/telegram"
                    android:onClick="@{fragment::goToTG}"
                    android:src="@drawable/telegram_logo" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/standard_margin"
                android:gravity="bottom"
                android:text="@string/copyright"
                android:textColor="@color/kBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>