<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/auth_navigation">

    <navigation
        android:id="@+id/auth_navigation"
        app:startDestination="@id/loginFragment">
        <fragment
            android:id="@+id/loginFragment"
            android:name="iooojik.anon.meet.ui.auth.login.LoginFragment"
            android:label="@string/login_fragment_title"
            tools:layout="@layout/fragment_login">
            <action
                android:id="@+id/action_loginFragment_to_registrationFragment1"
                app:destination="@id/registrationFragment1"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        </fragment>
        <fragment
            android:id="@+id/registrationFragment1"
            android:name="iooojik.anon.meet.ui.auth.registration.RegistrationFragment1"
            android:label="@string/register_fragment1_title"
            tools:layout="@layout/fragment_registration1">
            <action
                android:id="@+id/action_registrationFragment1_to_registrationFragment2"
                app:destination="@id/registrationFragment2"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
            <action
                android:id="@+id/action_registrationFragment1_to_loginFragment"
                app:destination="@id/loginFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        </fragment>
        <fragment
            android:id="@+id/registrationFragment2"
            android:name="iooojik.anon.meet.ui.auth.registration.RegistrationFragment2"
            android:label="@string/register_fragment2_title"
            tools:layout="@layout/fragment_registration2">
            <action
                android:id="@+id/action_registrationFragment2_to_registrationFragment1"
                app:destination="@id/registrationFragment1" />
        </fragment>
        <action
            android:id="@+id/action_global_filtersFragment"
            app:destination="@id/main_process_navigation"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </navigation>
    <navigation
        android:id="@+id/main_process_navigation"
        app:startDestination="@id/filtersFragment">
        <fragment
            android:id="@+id/filtersFragment"
            android:name="iooojik.anon.meet.ui.filters.FiltersFragment"
            android:label="@string/filters_title"
            tools:layout="@layout/fragment_filters">
            <action
                android:id="@+id/action_filtersFragment_to_settingsFragment"
                app:destination="@id/settingsFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"
                app:popUpTo="@id/filtersFragment" />
            <action
                android:id="@+id/action_filtersFragment_to_chatProcessFragment"
                app:destination="@id/chatProcessFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        </fragment>
        <fragment
            android:id="@+id/settingsFragment"
            android:name="iooojik.anon.meet.ui.settings.SettingsFragment"
            android:label="@string/settings_title"
            tools:layout="@layout/fragment_settings">
            <action
                android:id="@+id/action_settingsFragment_to_filtersFragment"
                app:destination="@id/filtersFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
            <action
                android:id="@+id/action_settingsFragment_to_aboutAppFragment"
                app:destination="@id/aboutAppFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        </fragment>
        <fragment
            android:id="@+id/chatProcessFragment"
            android:name="iooojik.anon.meet.ui.chat.ChatProcessFragment"
            android:label="@string/anonim"
            tools:layout="@layout/fragment_chat_process">
            <action
                android:id="@+id/action_chatProcessFragment_to_filtersFragment"
                app:destination="@id/filtersFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        </fragment>
        <action
            android:id="@+id/action_global_auth_navigation"
            app:destination="@id/auth_navigation"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <fragment
            android:id="@+id/aboutAppFragment"
            android:name="iooojik.anon.meet.ui.about.app.AboutAppFragment"
            android:label="@string/about_app"
            tools:layout="@layout/fragment_about_app">

        </fragment>
    </navigation>

</navigation>